# book_ros2

br2_odVff_avoidance/: CMakeLists.txt  package.xml
br2_odVff_avoidance/include/br2_odVff_avoidance/: AvoidanceNode.hpp  HeadController.hpp  ObjectDetector.hpp  PIDController.hpp
br2_odVff_avoidance/launch/: avoidance_odVff.launch.py
br2_odVff_avoidance/src/: avoidance_odVff_main.cpp
br2_odVff_avoidance/src/br2_odVff_avoidance/: AvoidanceNode.cpp  HeadController.cpp  ObjectDetector.cpp  PIDController.cpp
br2_odvff_avoidance/: CMakeLists.txt  package.xml
br2_odvff_avoidance/include/br2_odvff_avoidance/: AvoidanceNode.hpp  HeadController.hpp  ObjectDetector.hpp  PIDController.hpp
br2_odvff_avoidance/launch/: avoidance_odvff.launch.py
br2_odvff_avoidance/src/: avoidance_odvff_main.cpp
br2_odvff_avoidance/src/br2_odvff_avoidance/: AvoidanceNode.cpp  HeadController.cpp  ObjectDetector.cpp  PIDController.cpp
br2_tf2_detector/: CMakeLists.txt
br2_tf2_detector/include/br2_tf2_detector/: ObstacleMonitorNode.hpp  RobotMoveNode.hpp
br2_tf2_detector/launch/: robot_moves.launch.py
br2_tf2_detector/src/: robot_main.cpp
br2_tf2_detector/src/br2_tf2_detector/: ObstacleDetectorImprovedNode.cpp  ObstacleMonitorNode.cpp  RobotMoveNode.cpp
br2_tiago/launch/: sim_tele.launch.py
